--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.10.1</version>
         </plugin>
+        <!-- minimum version to allow for different parent deploys -->
+        <plugin>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>2.8.2</version>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
